--- a/ilcd.adoc
+++ b/ilcd.adoc
@@ -1,16 +1,51 @@
 = EPD Data Set Documentation
 :doctype: book
-:source-highlighter: highlightjs
 :stylesheet: ilcd.css
+:source-highlighter: highlightjs
 
 This document lists the ILCD format fields that are used to model EPD data …
 
+++++
+<script src="ilcd.js"></script>
+++++
+
 [.toprole]
 .TABLE: Namespace legend
+
 [cols="1,1,3", frame="all", grid="rows"]
-[cols="2,2,4,1,1,3,3,3,3,1,4,4,4", options="header", frame="all", grid="all"]
 |===
-| Field Name (de)
+| Information in the EPD namespace v1.1 is displayed with
+[role="fieldname_epd"]| blue background
+| (Namespace URI: "http://www.iai.kit.edu/EPD/2013", prefix "epd")
+
+| Information in the EPD namespace v1.2 is displayed with
+[role="fieldname_epd2"]| purple background
+| (Namespace URI: "http://www.indata.network/EPD/2019", prefix "epd2")
+|===
+
+// language selection
+++++
+<form id="formSelectLang">
+Language:
+<input type="radio" name="lang" id="checkFieldNameEn" checked onclick="selectLang('en')" value="en"/> en
+<input type="radio" name="lang" id="checkFieldNameDe" onclick="selectLang('de')" value="de"/> de
+</form>
+++++
+
+// column toggles
+++++
+<form id="formSelectFields">
+Show:
+<input type="checkbox" checked value="0" id="checkFieldNameDe"/> Field Name (de)
+<input type="checkbox" checked value="1" id="checkFieldNameEn"/> Field Name (en)
+<input type="checkbox" checked value="2"/> Element/Attribute Name
+// …other toggles…
+</form>
+++++
+
+[cols="2,2,4,1,1,3,3,3,3,1,4,4,4", options="header", frame="all", grid="all", id="tableID"]
+|===
+.title| Field Name (de)
 .title| Field Name (en)
 .title| Element/Attribute Name
 .title| Requ.
@@ -30,9 +65,9 @@ This document lists the ILCD format fields that are used to model EPD data …
 .root| m
 .root| [1,1]
 .root|
-.root| Datensatz für die Dokumentation von EPD-Daten
+.root| Datensatz für die Dokumentation of EPD data.
 .root| Data set for the documentation of EPD data.
-.root| Data set for unit processes, partly terminated systems, and LCI results. May contain LCIA results as well.
+.root| Data set for unit processes…
 .root| 1
 .root|
 .root|
